небольшие правки в шаблоны html  (проблема с подключением стилей)

--- a/src/templates/employee_testing.html
+++ b/src/templates/employee_testing.html
@@ -2,7 +2,7 @@
 {% block head %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Панель тестов</title>
-<link rel="stylesheet" href="src/static/employee_testing.css">
+<link rel="stylesheet" href="static/employee_testing.css">
 {% endblock %}
 
 {% block body %}
