--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block head %}
-    <link rel="stylesheet" href="src/static/main.css">
+    <link rel="stylesheet" href="static/main.css">
     <title>Basic Snake HTML Game</title>
     <meta charset="UTF-8">
 {% endblock %}
