--- a/src/templates/task_panel.html
+++ b/src/templates/task_panel.html
@@ -6,7 +6,7 @@
         display: none;
         }
     </style>
-    <link rel="stylesheet" href="src/static/task_panel.css">
+    <link rel="stylesheet" href="static/task_panel.css">
 {% endblock %}
 {% block body %}
 {% if access == "accountant" or access == "admin" %}
