--- a/src/templates/create_forms.html
+++ b/src/templates/create_forms.html
@@ -2,7 +2,7 @@
 {% block head %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Панель тестов</title>
-<link rel="stylesheet" href="src/static/create_forms.css">
+<link rel="stylesheet" href="static/create_forms.css">
 {% endblock %}
 {% block body %}
     <div id="modal" class="modal">
